[project]
name = "fruit-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Elodie",email = "elo.schwartz91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
